--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tonconnect/ui-react": "^2.0.0-beta.2",
     "@twa-dev/sdk": "^6.4.2",
     "buffer": "^6.0.3",
+    "daisyui": "^4.12.2",
     "is-mobile": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
