added manifest config

--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-    "url": "",
+    "url": "https://david-glitc.github.io/Flash_Swap/",
     "name": "Flash Swap",
-    "iconUrl": "../public/mmmm.png"
+    "iconUrl": "https://raw.githubusercontent.com/David-glitc/Flash_Swap/main/public/mmmm.png"
   }
